# anitrack

./: bun.lockb  nuxt.config.ts  package.json
.github/workflows/: release.yml
src/: app.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: anime.rs  mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src/assets/css/: tailwind.css
src/components/: AnimeCard.vue  AnimeForm.vue  CreateAnimeForm.vue  FontSelector.vue  ModeToggle.vue  Sidebar.vue  TitleBar.vue
src/composables/: useUpdater.ts
src/layouts/: default.vue
src/pages/: create.vue  index.vue  settings.vue
src/pages/anime/: [id].vue
src/pages/anime/edit/: [id].vue
src/stores/: anime.store.ts  config.store.ts  index.ts
src/types/: anime.types.ts  config.types.ts  index.ts
